--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Advice Generator</title>
 </head>
 <body>
@@ -16,6 +16,6 @@
             <button><img class="Dice" src="/Images/icon-dice.svg" alt=""></button>
         </div>
     </div>
-    <script src="/Javascript/script.js"></script>
+    <script src="./Javascript/script.js"></script>
 </body>
 </html>
