--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <h5>ADVICE <span id="Advice-Num">#117</span></h5>
         <p id="Advice-Quote">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
-        <img class="Divider-icon" src="/Images/pattern-divider-mobile.svg" alt="">
+        <img class="Divider-icon" src="./Images/pattern-divider-mobile.svg" alt="">
         <div style="display: flex; justify-content: center;">
-            <button><img class="Dice" src="/Images/icon-dice.svg" alt=""></button>
+            <button><img class="Dice" src="./Images/icon-dice.svg" alt=""></button>
         </div>
     </div>
     <script src="./Javascript/script.js"></script>
